samples/_failures_safe/1761042414_14ec47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4bd15bb.c: In function ‘main’:
./samples/SAFE/__tmp_e4bd15bb.c:157:31: error: missing terminating " character
  157 |             a.rows = read_int("Enter rows for matrix A (1-
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e4bd15bb.c:157:13: error: expected expression at end of input
  157 |             a.rows = read_int("Enter rows for matrix A (1-
      |             ^
./samples/SAFE/__tmp_e4bd15bb.c:157:22: error: too few arguments to function ‘read_int’
  157 |             a.rows = read_int("Enter rows for matrix A (1-
      |                      ^~~~~~~~
./samples/SAFE/__tmp_e4bd15bb.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e4bd15bb.c:157:13: error: expected declaration or statement at end of input
  157 |             a.rows = read_int("Enter rows for matrix A (1-
      |             ^
./samples/SAFE/__tmp_e4bd15bb.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4bd15bb.c:157:13: error: expected declaration or statement at end of input
